fixing draggable track layout bugs

--- a/assets/scss/modules/_homepage.scss
+++ b/assets/scss/modules/_homepage.scss
@@ -99,7 +99,7 @@
 
 
 // Previous Playlists
-.previous-playlists-container{
+.previous-playlists{
 	margin: 10em auto 4em;
 
 	h2{
